--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -3,6 +3,6 @@
 
 @import "{{ site.theme }}";
 
-body {
-  width: 100%; text-align: center;
+.main-content {
+  max-width: 85%; text-align: center;
 }
