--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -6,11 +6,10 @@
 .main-content {
   text-align:center;
   max-width: 100%;
-  margin: auto;
 }
 
-.table { 
- text-align:center;
- margin-left:auto; 
- margin-right:auto;
+table.center {
+  margin-left:auto; 
+  margin-right:auto;
 }
+
