--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+.page-header {
+  background-color: #34657F;
+}
+
 .main-content {
   text-align:center;
   max-width: 100%;
