--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -11,7 +11,7 @@
 .main-content {
   background-color: #333f48;
   text-align:center;
-  text-decoration-color: white;
+  text-color: white;
   max-width: 100%;
 }
 
