--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -10,8 +10,12 @@
 
 .main-content {
   background-color: #333f48;
-  text-align:center;
-  text-decoration-color: #ffffff;
+  text-align:center;  
   max-width: 100%;
+  
+  h2,
+  h3, {
+    text-decoration-color: #ffffff;
+  }
 }
 
