--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -13,13 +13,22 @@
   text-align:center;  
   max-width: 100%;
   
+  h1,
   h2,
-  h3, {
+  h3,
+  h4,
+  h5,
+  h6 {
     text-decoration-color: #ffffff;
   }
+  
   table {
     margin-left:auto; 
     margin-right:auto;
+    th,
+    td {
+      text-decoration-color: #ffffff;
+    }
   }
 }
 
