--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -23,9 +23,12 @@
   }
   
   table {
+    th {
+      color: #ffffff;
+    }
     th,
     td {
-      text-decoration-color: #ffffff;
+      color: #ffffff;
     }
   }
 }
